--- a/templates/countdown-bar.html
+++ b/templates/countdown-bar.html
@@ -21,7 +21,7 @@
     <div class="vertical-separator d-none d-md-flex mr-2"></div> -->
     <!-- <div class="horizontal-separator d-flex d-md-none"></div> -->
     <div class="d-flex flex-column justify-content-center subscribe-section">
-      <p>{{gettext("Subscribe to stay in touch.")}}</p>
+      <p>{{gettext("Subscribe to be the first to hear about important partnerships, exchange listings, and product launches.")}}</p>
       <form id="mailing-list-nav-bar" class="email-input input-group" method="post" action="/mailing-list/join">
         <input id="email" name="email" type="email" class="form-control" placeholder="{{gettext("Your email")}}"
           aria-label="Your email" aria-describedby="basic-addon2">
