--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="content-wrapper">
         <h1 class="title big text-left">{{gettext("Create your decentralized online store")}}</h1>
-        <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform. Get started for free and launch your store in a day.")}}</div>
+        <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform. Get started for free.")}}</div>
         <a 
           class="primary-button" 
           href="{{ universal.DSHOP_DEMO_FORM }}"
@@ -38,7 +38,7 @@
                 {{gettext("Fast setup, no commitments")}}
               </div>
               <div class="sub-title">
-                {{gettext("Launch a decentralised shop in a day - no commitments or long-term contracts.")}}
+                {{gettext("No commitments or long-term contracts.")}}
               </div>
             </div>
           </div>
@@ -95,11 +95,28 @@
           <a href="https://store.brave.com" target="_blank" rel="noopener noreferrer">
             <img src="/static/img/dshop/brave-logo.svg" class="brave-logo">
           </a>
+          <a href="https://kyber.ogn.app/" target="_blank" rel="noopener noreferrer">
+            <img class="swag mt-4 mt-md-3" src="/static/img/product/kyber-network.svg" class="kyber"/>
+          </a>
           <a href="https://store.solana.com" target="_blank" rel="noopener noreferrer">
             <img src="/static/img/dshop/solana-logo.png"
               srcset="/static/img/dshop/solana-logo@2x.png 2x,
                       /static/img/dshop/solana-logo@3x.png 3x"
               class="solana-logo">
+          </a>
+          <a href="https://store.contentos.io/" target="_blank" rel="noopener noreferrer">
+            <img
+              class="swag mt-4 mt-md-3 contentos"
+              src="/static/img/product/contentos.png"
+              srcset="/static/img/product/contentos@2x.png 2x, /static/img/product/contentos@3x.png 3x"
+            />
+          </a>
+          <a href="https://ternio.ogn.app/" target="_blank" rel="noopener noreferrer">
+            <img
+              class="swag mt-4 mt-md-3 ternio"
+              src="/static/img/product/ternio.png"
+              srcset="/static/img/product/ternio@2x.png 2x, /static/img/product/ternio@3x.png 3x"
+            />
           </a>
         </div>
 
@@ -117,8 +134,15 @@
           <div class="sub-title">
             {{gettext("Still have more questions? Feel free to contact us.")}}
           </div>
-          <a href="mailto:info@originprotocol.com" class="light-button">{{gettext("Contact Us")}}</a>
+          <a href="mailto:dshop@originprotocol.com" class="light-button">{{gettext("Contact Us")}}</a>
         </div>
+
+        <div class="testimonial d-flex flex-column align-items-center">
+          <div class="title">&#8216;&#8216;</div>
+          <div class="text">“Thanks to Origin’s new, decentralized e-commerce platform, Dshop, we had a swift and easy experience establishing the Contentos online e-commerce store. As we further our partnership, we look forward to introducing this similar experience to our global content creators, assisting them in creating Origin Dshops natively within the Contentos ecosystem and further monetizing their creative content.”</div>
+          <div class="footer-text">- Jackie Lim , Senior B.D. Director, Contentos</div>
+        </div>
+
       </div>
     </div>
   </section>
