--- a/templates/about.html
+++ b/templates/about.html
@@ -25,8 +25,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       class="contents d-flex flex-column justify-content-center align-items-center"
     >
       <h1 class="video-title">
-        {{gettext("It’s time to build the sharing economy without
-        intermediaries")}}
+        {{gettext("It’s time to cut out traditional intermediaries")}}
       </h1>
       <button
         id="about-video-button"
@@ -49,6 +48,7 @@ theme_dark=True %} {% include 'navbar.html' %} {% endwith %}
       have team members in China, Korea, Russia, India, New Zealand, and even
       Slovenia. Our 800+ investors include top venture capitalists and
       cryptocurrency funds all over the world.")}}
+      {{gettext("Origin Tokens (OGN) are held by over 25,000")}}&nbsp;<a href="https://etherscan.io/token/0x8207c1ffc5b6804f6024322ccf34f29c3541ae26">{{gettext("token holders.")}}</a>
     </div>
     <div
       class="d-flex justify-content-center mt-4 pt-2 flex-column flex-md-row"
